--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "sass": "^1.43.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.43.4",
+    "socket.io-client": "^4.6.1"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
